add custom Active text overlay

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    tools:openDrawer="start"
     tools:context=".MainActivity">
 
     <FrameLayout
@@ -36,9 +37,10 @@
         android:background="@color/colorWhite"
         android:layout_gravity="start"
         app:itemIconTint="@color/drawer_item"
-        app:itemBackground="@android:color/transparent"
+        app:itemBackground="@drawable/drawer_selected_item"
         app:itemTextColor="@color/drawer_item"
         app:menu="@menu/drawer_item"
+
         android:layout_height="match_parent">
 
     </com.google.android.material.navigation.NavigationView>
