--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#0288D1</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorWhite">#fff</color>
-    <color name="colorBlack">#000</color>
+    <color name="colorBlack">#fdcb6e</color>
     <color name="colorChecked">#c0392b</color>
+    <color name="colorSelected">#9b59b6</color>
 </resources>
